`readable-title-change-events` - Support new issue view (#8509)

--- a/source/features/readable-title-change-events.css
+++ b/source/features/readable-title-change-events.css
@@ -1,11 +1,13 @@
 /* Stack titles in title edition events to improve readability */
 
+div:has(> span[class^='RenamedTitleEvent']),
 .TimelineItem-body:has(del.markdown-title) {
 	display: flex;
-	flex-wrap: wrap;
+	flex-wrap: wrap !important;
 	gap: 0 0.3em;
 }
 
+span[class^='RenamedTitleEvent'],
 .TimelineItem-body :is(del, ins).markdown-title {
 	flex-basis: 100%;
 	order: 99;
@@ -17,5 +19,7 @@
 
 /*
 Test URLs
-https://github.com/refined-github/refined-github/pull/4030#event-4385348325
+
+- Issue: https://github.com/refined-github/sandbox/issues/112#event-18404386593
+- PR: https://github.com/refined-github/sandbox/pull/114#event-18404427896
 */
